kubernetes/test/rancher/chart/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-ingress
  namespace: rancher
  labels:
    app.kubernetes.io/name: rancher
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - rancher.yuriy-lab.cloud
    secretName: rancher-lab-tls
  rules:
    - host: "rancher.yuriy-lab.cloud"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: rancher
                port:
                  number: 443
